test-dir/kyverno-policies/disallow-privileged.testcase1.failure.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
spec:
  securityContext:
    privileged: true
  containers:
  - name: nginx
    image: nginx:latest
