test-dir/kyverno-policies/disallow-privileged.testcase2.success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-privileged-pod
spec:
  securityContext:
    privileged: false
  containers:
  - name: nginx
    image: nginx:latest
